force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <description>Collectors name under the claim tab</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Claim ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>