force-app/main/default/objects/Claim__c/fields/Acct_w_Outside_Collection_or_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Acct_w_Outside_Collection_or_Law_Firm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Outside Collection Agency or Outside Law Firm</description>
    <inlineHelpText>*This field is mandatory if the account is sent to an outside collection agency or to a law firm</inlineHelpText>
    <label>Acct w/ Outside Collection or Law Firm</label>
    <referenceTo>Insurance_Company__c</referenceTo>
    <relationshipLabel>Claims (Collection Company)</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>