force-app/main/default/objects/Claim__c/fields/Advance_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Advance_Exclusion__c</fullName>
    <inlineHelpText>1- Client cash advance program minus insurance maximum policy. 
2- Claims that no longer qualify for the advance program.</inlineHelpText>
    <label>Advance Exclusion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>