force-app/main/default/objects/Claim__c/fields/Average_Claim_Payment_settlement_days__c.field-meta.xml
<CustomField>
    <fullName>Average_Claim_Payment_settlement_days__c</fullName>
    <label>Days to Final Insurance Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>