force-app/main/default/objects/Claim__c/fields/Balance_Due_Formulae_del__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_Formulae_del__c</fullName>
    <formula>Total_Charges_del__c  -  Patient_Downpayment_del__c  -  Insurance_Payment_1_del__c  -  Insurance_Payment_2_del__c  -  Patient_Payment__c  -  Network_Discount_del__c  -  Manual_Adjustment_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>