force-app/main/default/objects/Claim__c/fields/Bank_Fees__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fees__c</fullName>
    <label>Total Bank Fees</label>
    <summarizedField>Claim_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Bank fees</value>
    </summaryFilterItems>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>