force-app/main/default/objects/Claim__c/fields/Bill_Review_Differential__c.field-meta.xml
<CustomField>
    <fullName>Bill_Review_Differential__c</fullName>
    <formula>Total_Charge__c  -  Medical_Bill_Review_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audited Bill Differential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>