force-app/main/default/objects/Claim__c/fields/Biller__c.field-meta.xml
<CustomField>
    <fullName>Biller__c</fullName>
    <inlineHelpText>The person submitting the claim for Collection</inlineHelpText>
    <label>Biller</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
                <default>true</default>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Ingrid</fullName>
            </value>
            <value>
                <fullName>Juan</fullName>
            </value>
            <value>
                <fullName>Lesly</fullName>
            </value>
            <value>
                <fullName>Patricia</fullName>
            </value>
            <value>
                <fullName>Rebecca</fullName>
            </value>
            <value>
                <fullName>Valentina</fullName>
            </value>
            <value>
                <fullName>Vander</fullName>
            </value>
            <value>
                <fullName>Daniel</fullName>
                <isActive>false</isActive>
                <label>Daniel</label>
            </value>
            <value>
                <fullName>Giancarlo</fullName>
                <isActive>false</isActive>
                <label>Giancarlo</label>
            </value>
            <value>
                <fullName>Olga</fullName>
                <isActive>false</isActive>
                <label>Olga</label>
            </value>
            <value>
                <fullName>Romina</fullName>
                <isActive>false</isActive>
                <label>Romina</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>