force-app/main/default/objects/Claim__c/fields/Claim_Balance_del__c.field-meta.xml
<CustomField>
    <fullName>Claim_Balance_del__c</fullName>
    <formula>IF(ISBLANK(Claim_Balance_Due__c), Total_Charge__c - ( Sum_of_Payments__c ), Claim_Balance_Due__c)</formula>
    <label>Claim Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>