force-app/main/default/objects/Claim__c/fields/Claim_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Claim_Balance_Due__c</fullName>
    <label>Claim Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>