force-app/main/default/objects/Claim__c/fields/Claim_Rate__c.field-meta.xml
<CustomField>
    <fullName>Claim_Rate__c</fullName>
    <defaultValue>0.15</defaultValue>
    <description>The claim rate charged to the client</description>
    <inlineHelpText>Rate charged to clients</inlineHelpText>
    <label>Claim Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>