force-app/main/default/objects/Claim__c/fields/Client_Fee_Payment_Date_del__c.field-meta.xml
<CustomField>
    <fullName>Client_Fee_Payment_Date_del__c</fullName>
    <label>Client Fee Payment Date</label>
    <type>Date</type>
</CustomField>