force-app/main/default/objects/Claim__c/fields/Collectability_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Collectability_Percentage__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>What is the collectability % of the Balance</inlineHelpText>
    <label>Collectability Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>