force-app/main/default/objects/Claim__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <description>**Collectors at the claim level**</description>
    <inlineHelpText>The Collector must be selected from patient main page. A collector is not allow to change this tab. Ask Your Administrator.</inlineHelpText>
    <label>Collector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24 7</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <default>true</default>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>A Greenblatt</fullName>
            </value>
            <value>
                <fullName>A Kanhere</fullName>
            </value>
            <value>
                <fullName>E Lacey</fullName>
            </value>
            <value>
                <fullName>External Collection</fullName>
            </value>
            <value>
                <fullName>G Ortez</fullName>
            </value>
            <value>
                <fullName>H Dar</fullName>
            </value>
            <value>
                <fullName>J Reyes</fullName>
            </value>
            <value>
                <fullName>J Sierra</fullName>
            </value>
            <value>
                <fullName>K Daskar</fullName>
            </value>
            <value>
                <fullName>M Mir</fullName>
            </value>
            <value>
                <fullName>M Musaib</fullName>
            </value>
            <value>
                <fullName>M Nissar</fullName>
            </value>
            <value>
                <fullName>M Shannon</fullName>
            </value>
            <value>
                <fullName>N Shay</fullName>
            </value>
            <value>
                <fullName>P Freeman</fullName>
            </value>
            <value>
                <fullName>S Mohi</fullName>
            </value>
            <value>
                <fullName>S Shah</fullName>
            </value>
            <value>
                <fullName>S Thomson</fullName>
            </value>
            <value>
                <fullName>U Qadir</fullName>
            </value>
            <value>
                <fullName>U Young</fullName>
            </value>
            <value>
                <fullName>V Ambar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>