force-app/main/default/objects/Claim__c/fields/Courtesy_Payment_Total__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Payment_Total__c</fullName>
    <label>Courtesy Payment Total</label>
    <summarizedField>Claim_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Courtesy Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>