force-app/main/default/objects/Claim__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date the claim was received by Passage Health International</description>
    <inlineHelpText>The date claim was received from provider</inlineHelpText>
    <label>Date Received</label>
    <required>true</required>
    <type>Date</type>
</CustomField>