force-app/main/default/objects/Claim__c/fields/Date_Sent_to_Ins_Co__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Ins_Co__c</fullName>
    <description>The date the claim was sent to the insurance company</description>
    <label>Date Sent to Ins Co</label>
    <type>Date</type>
</CustomField>