force-app/main/default/objects/Claim__c/fields/Days_in_AR__c.field-meta.xml
<CustomField>
    <fullName>Days_in_AR__c</fullName>
    <description>Please note that the AR dates do not stop counting even after the claim is closed in the system and payment has been received.</description>
    <formula>IF(ISNULL(DaysInAR__c), TODAY() - Date_Sent_to_Ins_Co__c, DaysInAR__c)</formula>
    <inlineHelpText>Amount of days since the claim was sent to Insurance</inlineHelpText>
    <label># Days in AR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>