force-app/main/default/objects/Claim__c/fields/Days_in_Payment_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Payment_Settlement__c</fullName>
    <label># Days in Payment Settlement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>