force-app/main/default/objects/Claim__c/fields/Days_to_Bill__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Bill__c</fullName>
    <description>Number of Days it took to bill claim</description>
    <formula>Date_Sent_to_Ins_Co__c - Date_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>