force-app/main/default/objects/Claim__c/fields/DaysInAR__c.field-meta.xml
<CustomField>
    <fullName>DaysInAR__c</fullName>
    <label>Claim AR Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>