force-app/main/default/objects/Claim__c/fields/Due_to_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Due_to_Insurance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Due to Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>