force-app/main/default/objects/Claim__c/fields/Earned_Fees_del__c.field-meta.xml
<CustomField>
    <fullName>Earned_Fees_del__c</fullName>
    <formula>Sum_of_Payments__c  *  Claim_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>