force-app/main/default/objects/Claim__c/fields/Facility_Charges__c.field-meta.xml
<CustomField>
    <fullName>Facility_Charges__c</fullName>
    <label>Facility Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>