force-app/main/default/objects/Claim__c/fields/Final_Payment_Summary_No__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Summary_No__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Final Payment Summary No</label>
    <type>AutoNumber</type>
</CustomField>