force-app/main/default/objects/Claim__c/fields/Final_Payment_Summary_Num__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Summary_Num__c</fullName>
    <description>Payment Number for write off Invoice PDF</description>
    <displayFormat>PN-{00000}</displayFormat>
    <inlineHelpText>Payment Number for write off Invoice PDF</inlineHelpText>
    <label>Final Payment Summary No</label>
    <type>AutoNumber</type>
</CustomField>