force-app/main/default/objects/Claim__c/fields/From_DOS__c.field-meta.xml
<CustomField>
    <fullName>From_DOS__c</fullName>
    <description>The claims starting date of service</description>
    <inlineHelpText>Admission date</inlineHelpText>
    <label>From DOS</label>
    <required>true</required>
    <type>Date</type>
</CustomField>