force-app/main/default/objects/Claim__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Insurance_Company__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>ClaimInsuranceCompany</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>