force-app/main/default/objects/Claim__c/fields/Insurance_Credit_Balance_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Credit_Balance_Date__c</fullName>
    <label>Insurance Credit Balance Date</label>
    <type>Date</type>
</CustomField>