force-app/main/default/objects/Claim__c/fields/Insurance_Payment_2_del__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payment_2_del__c</fullName>
    <label>Insurance Payment 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>