force-app/main/default/objects/Claim__c/fields/Interest_Payment__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>