force-app/main/default/objects/Claim__c/fields/Interest_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment_Date__c</fullName>
    <label>Interest Payment Date</label>
    <type>Date</type>
</CustomField>