force-app/main/default/objects/Claim__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>If provider do not assigned an Invoice No. Please use the auto-generated &quot;Case No.&quot; from the system as the Invoice No.You will have to go back to patient profile to retrieve this number.</inlineHelpText>
    <label>Invoice Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>