force-app/main/default/objects/Claim__c/fields/Latest_Collector_AR_Days__c.field-meta.xml
<CustomField>
    <fullName>Latest_Collector_AR_Days__c</fullName>
    <label>Latest Collector AR Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>