force-app/main/default/objects/Claim__c/fields/Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay__c</fullName>
    <description>Length of Patient&apos;s stay</description>
    <formula>To_DOS__c - From_DOS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Stay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>