force-app/main/default/objects/Claim__c/fields/Manual_Adjustment_del__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adjustment_del__c</fullName>
    <description>Any write off  approved from client to adjust claim balance</description>
    <inlineHelpText>Any write off  approved from client to adjust claim balance</inlineHelpText>
    <label>Manual Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>