force-app/main/default/objects/Claim__c/fields/Medical_Bill_Review_Charge__c.field-meta.xml
<CustomField>
    <fullName>Medical_Bill_Review_Charge__c</fullName>
    <label>Pre-Audit Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>