force-app/main/default/objects/Claim__c/fields/Medical_Provider__c.field-meta.xml
<CustomField>
    <fullName>Medical_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Medical Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Medical Provider)</relationshipLabel>
    <relationshipName>ClaimProvider</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>