force-app/main/default/objects/Claim__c/fields/Network_Discount_del__c.field-meta.xml
<CustomField>
    <fullName>Network_Discount_del__c</fullName>
    <description>Discount approved by client to Insurance</description>
    <inlineHelpText>Discount approved to Insurance</inlineHelpText>
    <label>Network Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>