force-app/main/default/objects/Claim__c/fields/Other_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Other_Adjustments__c</fullName>
    <label>Other Adjustments</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>