force-app/main/default/objects/Claim__c/fields/Pat_Resp__c.field-meta.xml
<CustomField>
    <fullName>Pat_Resp__c</fullName>
    <label>Pat Resp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>