force-app/main/default/objects/Claim__c/fields/Patient_Credit_Balance_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Credit_Balance_Date__c</fullName>
    <label>Patient Credit Balance Date</label>
    <type>Date</type>
</CustomField>