force-app/main/default/objects/Claim__c/fields/Patient_Downpayment_del__c.field-meta.xml
<CustomField>
    <fullName>Patient_Downpayment_del__c</fullName>
    <label>Patient Downpayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>