force-app/main/default/objects/Claim__c/fields/Patient_Payment__c.field-meta.xml
<CustomField>
    <fullName>Patient_Payment__c</fullName>
    <label>Patient Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>