force-app/main/default/objects/Claim__c/fields/Patient_Payment_Fee_del__c.field-meta.xml
<CustomField>
    <fullName>Patient_Payment_Fee_del__c</fullName>
    <formula>Patient_Payment__c  *  Claim_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>