force-app/main/default/objects/Claim__c/fields/Payable_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Payable_to_Client__c</fullName>
    <label>Payable to Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>