force-app/main/default/objects/Claim__c/fields/Payment_2_Received_del__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_Received_del__c</fullName>
    <label>Payment 2 Received</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>