force-app/main/default/objects/Claim__c/fields/Pending_Balance_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Balance_Payment_Date__c</fullName>
    <label>Pending Balance/Payment Date</label>
    <type>Date</type>
</CustomField>