force-app/main/default/objects/Claim__c/fields/Pending_Status__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status__c</fullName>
    <description>The reason why the claim is pending</description>
    <inlineHelpText>Claim status</inlineHelpText>
    <label>Pending Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance Paid To Provider</fullName>
            </value>
            <value>
                <fullName>Cash On Hold</fullName>
            </value>
            <value>
                <fullName>Claim in Process</fullName>
                <default>true</default>
                <label>Claim in Process</label>
            </value>
            <value>
                <fullName>Client Received Partial Payment</fullName>
            </value>
            <value>
                <fullName>Client Received Partial Payment ( Legal)</fullName>
            </value>
            <value>
                <fullName>Client Received Payment</fullName>
            </value>
            <value>
                <fullName>Courtesy Write Off / Ambulance</fullName>
            </value>
            <value>
                <fullName>Credit Revenue</fullName>
            </value>
            <value>
                <fullName>Duplicate Claim / Error</fullName>
            </value>
            <value>
                <fullName>Insurance refund processed paid</fullName>
            </value>
            <value>
                <fullName>Patient refund processed paid</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Payment Plan (Legal)</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Payment Received Partial</fullName>
            </value>
            <value>
                <fullName>Payment Received Partial ( Legal)</fullName>
            </value>
            <value>
                <fullName>Pending Balance from Patient</fullName>
            </value>
            <value>
                <fullName>Pending Balance from Patient (Legal)</fullName>
            </value>
            <value>
                <fullName>Pending Payment from Insurance</fullName>
            </value>
            <value>
                <fullName>Pending Payment from Insurance (Legal)</fullName>
            </value>
            <value>
                <fullName>Pending Payment from Patient</fullName>
            </value>
            <value>
                <fullName>Pending Payment from Patient (Legal)</fullName>
            </value>
            <value>
                <fullName>Pending Payment from Secondary Insurance</fullName>
            </value>
            <value>
                <fullName>PHIR</fullName>
            </value>
            <value>
                <fullName>Probate</fullName>
            </value>
            <value>
                <fullName>Refund Due Patient On HOLD</fullName>
            </value>
            <value>
                <fullName>Refund Processed &amp; Paid</fullName>
            </value>
            <value>
                <fullName>Refund Returned</fullName>
            </value>
            <value>
                <fullName>Refund To Be Processed Insurance</fullName>
            </value>
            <value>
                <fullName>Refund To Be Processed Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>