force-app/main/default/objects/Claim__c/fields/PHI_Fees_del__c.field-meta.xml
<CustomField>
    <fullName>PHI_Fees_del__c</fullName>
    <formula>( Total_Charges_del__c  -  Patient_Downpayment_del__c  -  Network_Discount_del__c  -  Manual_Adjustment_del__c  )  *  Claim_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PHI Cap Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>