force-app/main/default/objects/Claim__c/fields/PHI_Fees_Payment_Date_del__c.field-meta.xml
<CustomField>
    <fullName>PHI_Fees_Payment_Date_del__c</fullName>
    <label>PHI Fees Payment Date</label>
    <type>Date</type>
</CustomField>