force-app/main/default/objects/Claim__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>