force-app/main/default/objects/Claim__c/fields/Professional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Professional_Charges__c</fullName>
    <label>Professional Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>