force-app/main/default/objects/Claim__c/fields/Projected_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Payment_Date__c</fullName>
    <label>Projected Payment Date</label>
    <type>Date</type>
</CustomField>